version/0.17/_sources/api/solver/_autosummary/settings/solid_child.rst.txt
:orphan:

.. _solid_child:

solid_child
===========

.. autoclass:: ansys.fluent.core.solver.settings_232.solid_child.solid_child
    :show-inheritance:

.. rubric:: Attributes

==============================================================   ===================================================

Attribute                                                                                                    Summary

==============================================================   ===================================================
:ref:`name <name_1>`                                                                                   'name' child.

:ref:`chemical_formula <chemical_formula>`                           Specify the chemical formula for the substance.

:ref:`density <density_1>`                                                                          'density' child.

:ref:`specific_heat <specific_heat_1>`                                                        'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_1>`                                   'thermal_conductivity' child.

:ref:`atomic_number <atomic_number>`                                                          'atomic_number' child.

:ref:`absorption_coefficient <absorption_coefficient>`                               'absorption_coefficient' child.

:ref:`scattering_coefficient <scattering_coefficient_1>`                             'scattering_coefficient' child.

:ref:`scattering_phase_function <scattering_phase_function>`                      'scattering_phase_function' child.

:ref:`refractive_index <refractive_index>`                                                 'refractive_index' child.

:ref:`uds_diffusivity <uds_diffusivity_1>`                                                  'uds_diffusivity' child.

:ref:`electric_conductivity <electric_conductivity>`                                  'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`                   'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                        'lithium_diffusivity' child.

:ref:`magnetic_permeability <magnetic_permeability>`                                  'magnetic_permeability' child.

:ref:`struct_youngs_modulus <struct_youngs_modulus>`                                  'struct_youngs_modulus' child.

:ref:`struct_poisson_ratio <struct_poisson_ratio>`                                     'struct_poisson_ratio' child.

:ref:`struct_start_temperature <struct_start_temperature>`                         'struct_start_temperature' child.

:ref:`struct_thermal_expansion <struct_thermal_expansion>`                         'struct_thermal_expansion' child.

:ref:`struct_damping_alpha <struct_damping_alpha>`                                     'struct_damping_alpha' child.

:ref:`struct_damping_beta <struct_damping_beta>`                                        'struct_damping_beta' child.

==============================================================   ===================================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`solid <solid>`       'solid' child.

====================   ==================

